--- a/CarMood/app/index.html
+++ b/CarMood/app/index.html
@@ -6,11 +6,13 @@
   <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title></title>
+    <title>CarMood App</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="stylesheet" href="styles/main.css">
+    <!--<link rel="stylesheet" href="styles/BlackBerry-JQM-all.min.css">-->
+    
   </head>
   <body ng-app="CarMoodApp">
     <!--[if lt IE 7]>
@@ -25,6 +27,13 @@
     <!-- Add your site or application content here -->
     <div class="container" ng-view></div>
 
+    <script>
+        var meta = document.createElement("meta");
+        meta.setAttribute('name','viewport');
+        meta.setAttribute('content','initial-scale='+ (1/window.devicePixelRatio) + ',user-scalable=no');
+        document.getElementsByTagName('head')[0].appendChild(meta);
+   </script>
+   <!--<script src="scripts/BlackBerry-JQM-all.min.js"></script>-->
     <script src="components/angular/angular.js"></script>
     <script src="components/angular-resource/angular-resource.js"></script>
     <script src="components/angular-cookies/angular-cookies.js"></script>
